--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "54459329-c05b-4d0e-9caf-152ee63b45c1"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
